--- a/DBI.Data/App.config
+++ b/DBI.Data/App.config
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="OracleDatabase" connectionString="DATA SOURCE=S0055.dbiservices.com:1596/PROD;PASSWORD=qQTVPCGE;PERSIST SECURITY INFO=True;POOLING=False;USER ID=XXEMS"
-      providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="OracleDatabase" connectionString="DATA SOURCE=S0055.dbiservices.com:1596/PROD;PASSWORD=qQTVPCGE;PERSIST SECURITY INFO=True;POOLING=False;USER ID=XXEMS" providerName="Oracle.ManagedDataAccess.Client" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
