--- a/DBI.Web.EMS/Web.config
+++ b/DBI.Web.EMS/Web.config
@@ -8,8 +8,7 @@
     <section name="extnet" type="Ext.Net.GlobalConfig" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="OracleDatabase" connectionString="DATA SOURCE=S0055.dbiservices.com:1596/PROD;PASSWORD=qQTVPCGE;PERSIST SECURITY INFO=True;POOLING=False;USER ID=XXEMS"
-      providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0055.dbiservices.com:1596/PROD;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
