--- a/DBI.Data/App.config
+++ b/DBI.Data/App.config
@@ -5,10 +5,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings>
-    <add name="OracleDatabase" connectionString="DATA SOURCE=S0055.dbiservices.com:1596/PROD;PASSWORD=qQTVPCGE;PERSIST SECURITY INFO=True;POOLING=False;USER ID=XXEMS" providerName="Oracle.ManagedDataAccess.Client" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <connectionStrings>
+    <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0055.dbiservices.com:1596/PROD;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
