EV-4 #Added functionality to system, user can now add and delete user roles for each user #resolve

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -94,6 +94,9 @@
     <Compile Include="SYS_USER_ROLES.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="SYS_USER_ROLES_CT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
