--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -59,6 +59,10 @@
     </Compile>
     <Compile Include="Web\CustomIdentity.cs" />
     <Compile Include="Web\CustomPrincipal.cs" />
+    <Compile Include="Web\GuidException.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
