--- a/DBI.Web.EMS/Web.config
+++ b/DBI.Web.EMS/Web.config
@@ -48,7 +48,6 @@
     </system.web>
   </location>
 
-
   <system.identityModel.services>
     <federationConfiguration>
       <cookieHandler requireSsl="false"></cookieHandler>
@@ -65,6 +64,8 @@
     <handlers>
       <add name="DirectRequestHandler" verb="*" path="*/ext.axd" preCondition="integratedMode" type="Ext.Net.ResourceHandler"/>
     </handlers>
+    <httpErrors errorMode="Detailed" />
+    <asp scriptErrorSentToBrowser="true"/>
   </system.webServer>
   <system.data>
     <DbProviderFactories>
