--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -15,9 +15,9 @@
     <AssemblyName>DBI.Web.EMS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
+    <IISExpressSSLPort>44301</IISExpressSSLPort>
+    <IISExpressAnonymousAuthentication>enabled</IISExpressAnonymousAuthentication>
+    <IISExpressWindowsAuthentication>disabled</IISExpressWindowsAuthentication>
     <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -91,7 +91,8 @@
     <Content Include="Resources\Images\wwbnight.png" />
     <Content Include="Resources\Scripts\jquery-2.0.1.js" />
     <Content Include="Resources\Scripts\jquery-2.0.1.min.js" />
-    <Content Include="Views\Modules\Security\umSecurityRolesList.aspx" />
+    <Content Include="Views\Modules\Security\umSecurityLogList.aspx" />
+    <Content Include="Views\Modules\Security\umSecurityActivityList.aspx" />
     <Content Include="Views\Modules\Security\umSecurityUsersList.aspx" />
     <Content Include="Views\uxDefault.aspx" />
     <Content Include="Web.config">
@@ -113,12 +114,22 @@
       <DependentUpon>uxLogin.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Modules\Security\umSecurityRolesList.aspx.cs">
-      <DependentUpon>umSecurityRolesList.aspx</DependentUpon>
+    <Compile Include="Views\Handlers\SystemUsers.ashx.cs">
+      <DependentUpon>SystemUsers.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Security\umSecurityLogList.aspx.cs">
+      <DependentUpon>umSecurityLogList.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Views\Modules\Security\umSecurityRolesList.aspx.designer.cs">
-      <DependentUpon>umSecurityRolesList.aspx</DependentUpon>
+    <Compile Include="Views\Modules\Security\umSecurityLogList.aspx.designer.cs">
+      <DependentUpon>umSecurityLogList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Security\umSecurityActivityList.aspx.cs">
+      <DependentUpon>umSecurityActivityList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Security\umSecurityActivityList.aspx.designer.cs">
+      <DependentUpon>umSecurityActivityList.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Security\umSecurityUsersList.aspx.cs">
       <DependentUpon>umSecurityUsersList.aspx</DependentUpon>
@@ -137,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Scripts\jquery-2.0.1.min.map" />
+    <Content Include="Views\Handlers\SystemUsers.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -180,9 +192,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>0</DevelopmentServerPort>
+          <DevelopmentServerPort>18949</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:14312/</IISUrl>
+          <IISUrl>https://localhost:44301/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
