#EV-2 Added new files for Employees Projects for Mobile Development

--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="Ext.Net, Version=2.2.0.26560, Culture=neutral, PublicKeyToken=2e12ce3d0176cd87, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\root\Ext.Net\bin\WebForm NET40 Release\Ext.Net.dll</HintPath>
+      <HintPath>..\lib\EXT\Ext.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
