--- a/DBI.Mobile.EMS/DBI.Mobile.EMS.csproj
+++ b/DBI.Mobile.EMS/DBI.Mobile.EMS.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
