--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -136,6 +136,9 @@
       <DependentUpon>uxLogin.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Handlers\WebProjects.ashx.cs">
+      <DependentUpon>WebProjects.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Handlers\SystemUsers.ashx.cs">
       <DependentUpon>SystemUsers.ashx</DependentUpon>
     </Compile>
@@ -185,6 +188,7 @@
   <ItemGroup>
     <Content Include="Resources\Scripts\jquery-2.0.1.min.map" />
     <Content Include="Views\Handlers\SystemUsers.ashx" />
+    <Content Include="Views\Handlers\WebProjects.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
