Added the Daily_Activity_header table and also updated the Inventory_v view. EV-18

--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -31,10 +31,8 @@
     <DocumentationFile>bin\Release\DBI.Core.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ext.Net, Version=2.2.0.26560, Culture=neutral, PublicKeyToken=2e12ce3d0176cd87, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\EXT\Ext.Net.dll</HintPath>
-      <HintPath>..\..\..\..\Ext 2.3\Ext.Net.dll</HintPath>
+    <Reference Include="Ext.Net">
+      <HintPath>..\..\Ext 2.3\Ext.Net.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
